@@ -5,3 +5,4 @@
 ^LICENSE$
 .*\.tar\.gz$
 ^\.github
+^local
