@@ -1,3 +1,8 @@
+2023-01-14  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/datetime.c (formatPOSIXlt): Replace one sprintf with snprintf
+	* src/datetime.h: Minor sync from R sources
+
 2022-10-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.7
